Set the min JDK to 11, Modularize everything