@@ -11,6 +11,10 @@
 
     <description>A Domain Driven SQL Builder Generator for JPMS/JDK8</description>
 
+    <properties>
+        <surefireArgLine></surefireArgLine>
+    </properties>
+
     <licenses>
         <license>
             <name>GPL 3</name>
@@ -154,126 +158,36 @@
         <url>http://jwebmp.com/teamcity</url>
     </ciManagement>
 
-    <profiles>
-        <profile>
-            <id>jdk8</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.moditect</groupId>
-                        <artifactId>moditect-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>add-module-infos</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>add-module-info</goal>
-                                </goals>
-                                <configuration>
-                                    <overwriteExistingFiles>true</overwriteExistingFiles>
-                                    <module>
-                                        <moduleInfoFile>
-                                            src/jre11/java/module-info.java
-                                        </moduleInfoFile>
-                                    </module>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
+    <build>
+        <plugins>
 
-                    <plugin>
-                        <groupId>org.hibernate.orm.tooling</groupId>
-                        <artifactId>hibernate-enhance-maven-plugin</artifactId>
-                        <version>5.4.3.Final</version>
-                        <executions>
-                            <execution>
-                                <configuration>
-                                    <failOnError>false</failOnError>
-                                    <enableLazyInitialization>true</enableLazyInitialization>
-                                    <enableDirtyTracking>true</enableDirtyTracking>
-                                    <enableAssociationManagement>true</enableAssociationManagement>
-                                    <enableExtendedEnhancement>false</enableExtendedEnhancement>
-                                </configuration>
-                                <phase>compile</phase>
-                                <goals>
-                                    <goal>enhance</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <failOnError>false</failOnError>
-                            <enableLazyInitialization>true</enableLazyInitialization>
-                            <enableDirtyTracking>true</enableDirtyTracking>
-                            <enableAssociationManagement>true</enableAssociationManagement>
-                            <enableExtendedEnhancement>false</enableExtendedEnhancement>
-                        </configuration>
-                    </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.5.0</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <!--suppress MavenModelInspection -->
+                    <argLine>--add-opens
+                        java.base/java.lang=com.google.guice,javassist ${surefireArgLine}
+                    </argLine>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <!-- Sets the VM argument line used when unit tests are run. -->
+                </configuration>
+            </plugin>
 
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.1</version>
-                        <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
-                            <annotationProcessorPaths>
-                                <annotationProcessorPath>
-                                    <groupId>org.hibernate</groupId>
-                                    <artifactId>hibernate-jpamodelgen</artifactId>
-                                    <version>5.4.3.Final</version>
-                                </annotationProcessorPath>
-                                <path>
-                                    <groupId>javax.xml.bind</groupId>
-                                    <artifactId>jaxb-api</artifactId>
-                                    <version>2.3.0</version>
-                                </path>
-                                <path>
-                                    <groupId>javax.annotation</groupId>
-                                    <artifactId>javax.annotation-api</artifactId>
-                                    <version>1.3.1</version>
-                                </path>
-                            </annotationProcessorPaths>
-                            <annotationProcessors>
-                                <annotationProcessor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</annotationProcessor>
-                            </annotationProcessors>
-                            <compilerArguments>
-                                <AaddGeneratedAnnotation>false</AaddGeneratedAnnotation>
-                                <Adebug>true</Adebug>
-                            </compilerArguments>
-
-                        </configuration>
-
-                    </plugin>
-
-
-                </plugins>
-
-            </build>
-        </profile>
-
-        <profile>
-            <id>jdk12</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.hibernate.orm.tooling</groupId>
-                        <artifactId>hibernate-enhance-maven-plugin</artifactId>
-                        <version>5.4.3.Final</version>
-                        <executions>
-                            <execution>
-                                <configuration>
-                                    <failOnError>false</failOnError>
-                                    <enableLazyInitialization>true</enableLazyInitialization>
-                                    <enableDirtyTracking>true</enableDirtyTracking>
-                                    <enableAssociationManagement>true</enableAssociationManagement>
-                                    <enableExtendedEnhancement>true</enableExtendedEnhancement>
-                                </configuration>
-                                <phase>compile</phase>
-                                <goals>
-                                    <goal>enhance</goal>
-                                </goals>
-                            </execution>
-                        </executions>
+            <plugin>
+                <groupId>org.hibernate.orm.tooling</groupId>
+                <artifactId>hibernate-enhance-maven-plugin</artifactId>
+                <version>5.4.3.Final</version>
+                <executions>
+                    <execution>
                         <configuration>
                             <failOnError>false</failOnError>
                             <enableLazyInitialization>true</enableLazyInitialization>
@@ -281,69 +195,81 @@
                             <enableAssociationManagement>true</enableAssociationManagement>
                             <enableExtendedEnhancement>true</enableExtendedEnhancement>
                         </configuration>
-                    </plugin>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>enhance</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <failOnError>false</failOnError>
+                    <enableLazyInitialization>true</enableLazyInitialization>
+                    <enableDirtyTracking>true</enableDirtyTracking>
+                    <enableAssociationManagement>true</enableAssociationManagement>
+                    <enableExtendedEnhancement>true</enableExtendedEnhancement>
+                </configuration>
+            </plugin>
 
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.1</version>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>12</release>
+                    <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>5.4.3.Final</version>
+                        </annotationProcessorPath>
+                        <path>
+                            <groupId>javax.xml.bind</groupId>
+                            <artifactId>jaxb-api</artifactId>
+                            <version>2.3.0</version>
+                        </path>
+                        <path>
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>javax.annotation-api</artifactId>
+                            <version>1.3.1</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <annotationProcessors>
+                        <annotationProcessor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</annotationProcessor>
+                    </annotationProcessors>
+                    <compilerArguments>
+                        <AaddGeneratedAnnotation>false</AaddGeneratedAnnotation>
+                        <Adebug>true</Adebug>
+                    </compilerArguments>
+
+                </configuration>
+
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
                         <configuration>
-                            <release>12</release>
-                            <annotationProcessorPaths>
-                                <annotationProcessorPath>
-                                    <groupId>org.hibernate</groupId>
-                                    <artifactId>hibernate-jpamodelgen</artifactId>
-                                    <version>5.4.3.Final</version>
-                                </annotationProcessorPath>
-                                <path>
-                                    <groupId>javax.xml.bind</groupId>
-                                    <artifactId>jaxb-api</artifactId>
-                                    <version>2.3.0</version>
-                                </path>
-                                <path>
-                                    <groupId>javax.annotation</groupId>
-                                    <artifactId>javax.annotation-api</artifactId>
-                                    <version>1.3.1</version>
-                                </path> 
-                            </annotationProcessorPaths>
-                            <annotationProcessors>
-                                <annotationProcessor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</annotationProcessor>
-                            </annotationProcessors>
-                            <compilerArguments>
-                                <AaddGeneratedAnnotation>false</AaddGeneratedAnnotation>
-                                <Adebug>true</Adebug>
-                            </compilerArguments>
-
+                            <sources>
+                                <source>src/main/java</source>
+                                <!--<source>src/jre10/java</source>-->
+                                <source>src/jre11/java</source>
+                            </sources>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
-                    </plugin>
+        </plugins>
+    </build>
 
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>build-helper-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>add-source</id>
-                                <phase>generate-sources</phase>
-                                <goals>
-                                    <goal>add-source</goal>
-                                </goals>
-                                <configuration>
-                                    <sources>
-                                        <source>src/main/java</source>
-                                        <!--<source>src/jre10/java</source>-->
-                                        <source>src/jre11/java</source>
-                                    </sources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                </plugins>
-            </build>
-
-        </profile>
-
+    <profiles>
         <profile>
             <id>jwebmp-distribution</id>
             <activation>
